--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "open-props": "^1.7.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
