--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-blur": "node scripts/generateBlur.mjs"
   },
   "dependencies": {
     "classnames": "^2.5.1",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "open-props": "^1.7.8",
+    "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
