--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "classnames": "^2.5.1",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "noisejs": "^2.1.0",
     "open-props": "^1.7.8",
     "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
