--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "generate-blur": "node scripts/generateBlur.mjs"
   },
   "dependencies": {
+    "lenis": "^1.1.18",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.16.1",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.16",
     "noisejs": "^2.1.0",
     "open-props": "^1.7.8",
     "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-spinners": "^0.15.0",
+    "sass": "^1.83.1",
     "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
